# ariac

./: .gitignore  README.md
ros/: CMakeLists.txt  package.xml
ros/.catkin_tools/profiles/default/: devel_collisions.txt
ros/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
ros/devel/.private/moveittest/: .catkin  .rosinstall
ros/devel/.private/testtraj/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  moveittest.pc  testtraj.pc
ros/devel/lib/testtraj/: testtraj_node
ros/logs/testtraj/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
ros/moveittest_moveit/config/: controllers.yaml  joint_names.yaml
ros/moveittest_moveit/launch/: moveittest_planning_execution.launch  ur10_moveit_controller_manager.launch.xml
ros/moveittest_moveit_config/config/: controllers.yaml
ros/moveittest_moveit_config/launch/: moveittest_moveit_controller_manager.launch.xml
ros/src/moveittest/: CMakeLists.txt
ros/src/moveittest/src/: moveittest_node.cpp
ros/src/testtraj/: CMakeLists.txt  package.xml
ros/src/testtraj/src/: testtraj_node.cpp
ros/src/ur10_moveit_config/config/: controllers.yaml
workspace/devel/: .catkin
workspace/devel/include/ur_msgs/: Digital.h  (+3 more)
workspace/install/: .rosinstall  local_setup.sh  setup.sh
workspace/src/moveit_test/: CMakeLists.txt  package.xml
workspace/src/moveit_test/src/: moveit_test_node.cpp
(+72 files in other folders)
