<?xml version="1.0"?>
<package format="2">
  <name>moveit_test</name>
  <version>0.0.0</version>
  <description>The moveit_test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gents@todo.todo">gents</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>moveit_core</depend>
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>

  <test_depend>roslaunch</test_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
